# symbolic-resonance-solver

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SRS_PAPER.md  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: README.md  __init__.py  base.py  benchmark_sat.py  run_all.py
notebooks/: QUICKSTART.md  README.md  solver_demo.ipynb
srs/: __init__.py  version.py
srs/constraints/: __init__.py  base.py  graph.py  sat.py  subset_sum.py
srs/core/: __init__.py  engine.py  hilbert.py  particle.py  state.py
srs/types/: __init__.py  config.py  solution.py  telemetry.py
tests/: __init__.py  conftest.py  test_solver_integration.py
tests/test_constraints/: __init__.py  test_graph.py  test_sat.py  test_subset_sum.py
tests/test_core/: test_hilbert.py  test_particle.py
