[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-resonance-solver"
version = "0.1.7"
description = "Revolutionary NP-complete problem solver using symbolic entropy spaces and quantum resonance dynamics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Restricted Use License - See LICENSE file"}
authors = [
    {name = "Sebastian Schepis", email = "sschepis@gmail.com"}
]
keywords = ["NP-complete", "SAT", "optimization", "quantum", "symbolic resonance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
perf = [
    "numba>=0.56.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "notebook>=6.5.0",
]
all = [
    "symbolic-resonance-solver[dev,viz,perf,notebook]"
]

[project.scripts]
srs = "srs.cli:main"

[project.urls]
Homepage = "https://nphardsolver.com"
Documentation = "https://nphardsolver.com/docs"
Repository = "https://github.com/sschepis/np-complete-solver"
"Bug Tracker" = "https://github.com/sschepis/np-complete-solver/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["srs*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=srs --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102"]